<resources>
    <string name="app_name">Elderly Supportive System</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="medicines">Medicines</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="add_disease">Add Disease</string>
    <string name="diseases">Diseases</string>
    <string name="login_as_admin">Login As Admin</string>
    <string name="admin">Admin</string>
    <string name="conflicts">Conflicts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_medicine">Add New Medicine</string>
    <string name="medicine_name">Medicine name</string>
    <string name="medicine_description">Medicine description</string>
    <string name="medicine_list">Medicine List</string>
    <string name="disease_list">Disease List</string>
    <string name="add_new_disease">Add New Disease</string>
    <string name="disease_name">Disease name</string>
    <string name="disease_description">Disease description</string>
    <string name="medicine_conflicts">Medicine Conflicts</string>
    <string name="disease_conflicts">Disease Conflicts</string>
    <string name="save">Save</string>
    <string name="conflict_name">Conflict Name</string>
    <string name="conflict_description">Conflict description</string>
    <string name="add_new_conflict">Add New Conflict</string>
    <string name="email_password_required">You must enter email and password</string>
    <string name="sign_in_general_error_msg">Wrong ُemail or password. Please try again</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_name">User Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="civil_id">Civil ID</string>
    <string name="age">Age</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="register_now">Register Now</string>
    <string name="medical_profile">Medical Profile</string>
    <string name="no_current_diseases">No current diseases</string>
    <string name="personal_information">Personal Information</string>
    <string name="relatives">Relatives</string>
    <string name="add_relative">Add Relative</string>
    <string name="no_current_relatives">No current relatives</string>
</resources>