<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SignInActivity">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@null"
        android:src="@drawable/ic_back"
        app:tint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="164dp"
            android:layout_height="164dp"
            android:src="@drawable/logo_transparent" />

        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/email"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/password"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="16sp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_hieght"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/cornered_primary_bg"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/login_as_admin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_hieght"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/cornered_third_bg"
            android:foreground="?selectableItemBackgroundBorderless"
            android:text="@string/login_as_admin"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textColor="@color/dark_gray"
                android:text="@string/don_t_have_an_account"/>

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/scan_qr_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="32dp"
        android:background="@drawable/cornered_stroke_accent_bg"
        android:foreground="?selectableItemBackgroundBorderless"
        android:text="@string/scan_qr_code"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>