<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SignUpActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.SignInActivity">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@null"
        android:src="@drawable/ic_back"
        app:tint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="164dp"
                android:layout_height="164dp"
                android:src="@drawable/logo_transparent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_now"/>

            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/user_name"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/email"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/password"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textSize="16sp"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/civil_id_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/civil_id"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:inputType="numberDecimal"/>

            <EditText
                android:id="@+id/phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/phone"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:inputType="phone"/>

            <EditText
                android:id="@+id/address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/address"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:inputType="text"/>

            <EditText
                android:id="@+id/age_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/colorAccent"
                android:hint="@string/age"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:inputType="numberDecimal"/>

            <Spinner
                android:id="@+id/blood_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:entries="@array/blood_types"/>

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:entries="@array/gender"/>


            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_hieght"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/cornered_primary_bg"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/generate_qr_code"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>