<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent_gray_2"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:context=".presentation.admin.medicines.AddMedicineFragment">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@null"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_disease"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/disease_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/disease_name"
            android:inputType="textCapWords"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/disease_desc_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/disease_description"
            android:inputType="textMultiLine"
            android:textSize="16sp" />

        <View
            android:id="@+id/seperator"
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@drawable/cornered_dark_gray_bg" />

        <Button
            android:id="@+id/save_disease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/cornered_accent_bg"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>