<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/disease_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <TextView
            android:id="@+id/diseases_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:text="@string/diseases"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/add_disease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:drawableEnd="@drawable/ic_add"
            android:drawablePadding="8dp"
            android:text="@string/add_disease"
            android:textAllCaps="false"
            android:textColor="@color/transparent_gray"
            app:drawableTint="@color/white" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/diseases_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/disease_header_layout">

        <LinearLayout
            android:id="@+id/diseases_empty_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/transparent_gray_2"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/no_diseases" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/no_current_diseases" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_diseases_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/transparent_gray_2"
            android:clipToPadding="false"
            android:padding="8dp"
            tools:listitem="@layout/user_disease_item_layout"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>