<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/transparent_gray_2"
    app:behavior_peekHeight="350dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@null"
        android:src="@drawable/ic_back"
        app:tint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medicine_conflicts"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_button" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/conflicts_list_layout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/back_button">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/medicine_conflicts_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:padding="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/conflict_item_layout" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_medicine_conflict"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_conflict_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="32dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/medicine_conflict_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/conflict_name"
            android:inputType="textCapWords"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/medicine_conflict_desc_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/conflict_description"
            android:inputType="textMultiLine"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/medicine_conflict_name_edit_text"/>

        <View
            android:id="@+id/seperator"
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/cornered_dark_gray_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/save_medicine_conflict"/>

        <Button
            android:id="@+id/save_medicine_conflict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/cornered_accent_bg"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>