<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AdminActivity">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@null"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Admin"
        android:textColor="@color/colorAccent"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="@id/back_button"
        app:layout_constraintBottom_toBottomOf="@id/back_button"/>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:src="@drawable/doctor_profile"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/back_button"
        app:layout_constraintTop_toTopOf="@id/title1"
        app:shapeAppearance="@style/circleImageView" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32sp"
        android:text="Admin"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        app:layout_constraintStart_toEndOf="@id/profile"
        app:layout_constraintTop_toBottomOf="@id/back_button" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dashboard"
        android:textColor="@color/colorAccent"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="@id/title1"
        app:layout_constraintTop_toBottomOf="@id/title1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/medicines_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginStart="32sp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="32dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/title2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cornered_accent_bg"
            android:paddingStart="32dp"
            android:paddingEnd="32sp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/medicines_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicines"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icons8_medicines_100"
                app:layout_constraintEnd_toEndOf="@id/medicines_title"
                app:layout_constraintStart_toStartOf="@id/medicines_title"
                app:layout_constraintTop_toBottomOf="@id/medicines_title" />

            <TextView
                android:id="@+id/medicined_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Overview of a patient's medication information, including their conflicts "
                android:textColor="@color/transparent_gray"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="@id/medicines_title"
                app:layout_constraintStart_toEndOf="@id/medicines_title"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/add_medicine"
                android:layout_width="120dp"
                android:layout_height="32dp"
                android:background="@drawable/cornered_white_bg"
                android:text="@string/add_medicine"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/diseases_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32sp"
        app:cardCornerRadius="32dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toBottomOf="@id/medicines_card_view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cornered_third_bg"
            android:paddingStart="32dp"
            android:paddingEnd="32sp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/diseases_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diseases"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icons8_diseases_100"
                app:layout_constraintEnd_toEndOf="@id/diseases_title"
                app:layout_constraintStart_toStartOf="@id/diseases_title"
                app:layout_constraintTop_toBottomOf="@id/diseases_title" />

            <TextView
                android:id="@+id/diseases_desc"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:ellipsize="end"
                android:text="Disease information provides a concise summary of a patient's medical condition for quick and efficient reference"
                android:textColor="@color/transparent_gray"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/add_disease"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/diseases_title"
                app:layout_constraintTop_toTopOf="@id/diseases_title" />

            <Button
                android:id="@+id/add_disease"
                android:layout_width="120dp"
                android:layout_height="32dp"
                android:background="@drawable/cornered_white_bg"
                android:text="@string/add_disease"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>